subprojects {
  apply plugin: 'java'

  group = 'org.wtf.skybar'
  version = '1.0-SNAPSHOT'

  sourceCompatibility = 1.8
  targetCompatibility = 1.8

  repositories {
    jcenter()
  }
}

defaultTasks 'clean', 'build', 'shadowJar'

ext.deps = [
    slf4j: '1.7.10',
    jetty: '9.2.9.v20150224'
]

task wrapper(type: Wrapper) {
  gradleVersion = '2.3'
}
